# python-intro

zadanie _1/: zadanie_1.py
zadanie_2/: app.py  test_app.py
zadanie_3/: .coverage  LICENSE  README.md  pyproject.toml
zadanie_3/.github/workflows/: python-package.yml
zadanie_3/src/my_awesome_lib/: __init__.py  data_utils.py  math_tools.py  text_processing.py
zadanie_3/src/my_awesome_lib.egg-info/: PKG-INFO  SOURCES.txt
zadanie_3/tests/: test_data_utils.py  test_math_tools.py  test_text_processing.py
zadanie_4/: README.md  mcdm_analysis.py  report.md
zadanie_5/: report.md
zadanie_5/examples/: matplotlib_example.py  seaborn_example.py
