[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-awesome-lib"
version = "0.1.0"
description = "Toolkit for data, math and text tasks"
authors = [{name = "Twoje Imię", email = "ty@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []           # dodasz później

[tool.pytest.ini_options]
addopts = "-ra --cov=src/my_awesome_lib --cov-report=term-missing"
testpaths = ["tests"]
